examples/errors/undeclared_class.olang

Program: Main(1.1, 1.2)

class Main is
    this() is
        var a : Error(5)
    end
end